sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:6: error: not found: value nb
    nb=false
    ^